# minifilter-rs

./: .clang-format  .gitignore  Cargo.toml  README.md
minifilter/: .gitignore  CMakeLists.txt  FsFilter.inf.in  RWatch.sln
minifilter/FsFilter/: Communication.cpp  Communication.h  DriverData.cpp  DriverData.h  FSFilter.cpp  FsFilter.h  FsFilter.inf  FsFilter.rc  FsFilter.vcxproj  HashTable.h  KernelCommon.cpp  KernelCommon.h  KernelString.cpp  KernelString.h  ShanonEntropy.cpp  config.h.in
minifilter/SharedDefs/: SharedDefs.h
minifilter/cmake/: FindWdk.cmake  FindWindowsSDK.cmake
minifilter/dev/: install_minifilter.ps1.in  uninstall_minifilter.ps1.in
packaging/windows/: installer-script.nsis  installer-script.nsis.in
src/: driver_comm.rs  lib.rs  main.rs  shared_def.rs
src/process/: extensions.rs  mod.rs
src/slc_paths/: clustering.rs  mod.rs
src/worker/: mod.rs  process_record_handling.rs  process_records.rs
