[package]
name = "minifilter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.6"
widestring = "1.0.1"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2.14"
wchar = "0.11.0"

[dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Storage_InstallableFileSystems",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]

[dependencies.windows]
version = "0.38.0"
features = [
    "Win32_Storage_InstallableFileSystems",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]