[package]
name = "minifilter-rs"
version = "0.1.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
description = "Rust communication with windows minifilter"
repository = "https://github.com/sn99/minifilter-rs"
license = "MIT"
readme = "README.md"
keywords = ["ffi", "driver", "security", "windows", "minifilter", "bindings"]
documentation = "https://docs.rs/minifilter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.25.2"
widestring = "1.0.1"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2.14"
wchar = "0.11.0"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Storage_InstallableFileSystems",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3